# efilite

./: .gitignore  Cargo.toml  README.md  efilite.lds
.cargo/: config  config.toml
.github/workflows/: rust.yml
src/: cmo.rs  console.rs  cstring.rs  efilite.lds  entry.s  fwcfg.rs  idmap.rs  initrd.rs  main.rs  mapper.rs  pagealloc.rs  paging.rs  pecoff.rs  pl031.rs  psci.rs  rng.rs  ttable.s
src/efi/: bootservices.rs  configtable.rs  devicepath.rs  initrdloadfile2.rs  loadedimage.rs  memmap.rs  memorytype.rs  mod.rs  rng.rs  runtimeservices.rs  simpletext.rs  start_image.s  status.rs  systemtable.rs  tableheader.rs
