[package]
name = "efilite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.9.1"
log = "0.4.14"
mmio = "2.1.0"
fdt = "0.1.3"
bitflags = "1.3"
const-utf16 = "0.2.1"
byte-slice-cast = { version = "1.2.1", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
