[package]
name = "efilite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10.5"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
mmio = "2.1.0"
fdt = "0.1.5"
once_cell = { version = "1.18.0", default-features = false, features = ["alloc"]  }
efiloader = "0.0.1"
aarch64-paging = "0.5.0"
aarch64-intrinsics = { version = "1.0.0", optional = true }

[features]
default = ["use_optimized_intrinsics"]
use_optimized_intrinsics = ["dep:aarch64-intrinsics"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
#lto = true   # breaks BTI
